<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weight_label">Weight</string>
    <string name="miles_ran_label">Miles Ran</string>
    <string name="calories_burned_label">Calories Burned</string>
    <string name="height_label">Height</string>
    <string name="bmi_label">BMI</string>
    <string name="name_label">Name</string>
    <string name="_00_0">00.0</string>
    <string name="_1">1</string>
    <string name="_00">00</string>
    <string name="name">Name</string>
    <string name="_000">000</string>
</resources>
